--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -43,7 +43,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add setup.py datatable/__init__.py
           git commit -m "chore: bump version to $VERSION [GitHub Actions]"
-          git push
+          git push origin HEAD:main
 
   build-and-publish:
     runs-on: ubuntu-latest
