--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,8 +9,11 @@ permissions:
   id-token: write # needed for trusted publishing to PyPI
 
 jobs:
-  sync-version:
+  sync-version-then-publish:
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/project/pyside6-datatable-widget/${{ github.event.release.tag_name }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -44,20 +47,7 @@ jobs:
           git add setup.py datatable/__init__.py
           git commit -m "chore: bump version to $VERSION [GitHub Actions]"
           git push origin HEAD:main
-
-  build-and-publish:
-    runs-on: ubuntu-latest
-    needs: sync-version
-    environment:
-      name: pypi
-      url: https://pypi.org/project/pyside6-datatable-widget/${{ github.event.release.tag_name }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.x"
-
+       
       - name: Build release distributions
         run: |
           python -m pip install build
