--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -44,6 +44,10 @@ jobs:
         run: |
           sed -i -E "s/__version__ *= *[\"'][0-9a-zA-Z\.\-]+[\"']/__version__ = \"${VERSION}\"/" datatable/__init__.py
 
+      - name: Remove all breakpoint() calls
+        run: |
+          find . -type f -name '*.py' -exec sed -i '/breakpoint()/d' {} +
+
       - name: Build release distributions
         run: |
           # NOTE: put your own distribution build steps here.
